Improve immutable collections.